2005-01-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/music.hh (class Music): include SCM init argument.

	* scripts/convert-ly.py (conv): add  # to \property scalar value.

	* mf/GNUmakefile: don't install *list.ly

2005-01-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile (CFF_FILES): Bugfix: only big cheeses and braces.

2005-01-12  Werner Lemberg  <wl@gnu.org>

	This patch addresses the following problems in the feta sources
	files which contribute to the fetaXX fonts.

	. Many fixes for rasterization at low resolutions (consistent use of
	  `vround' and `hround', integer shift values for paths, applying
	  `eps' for mirrored paths, use of `define_whole_pixels' and
	  friends, etc.) -- while this probably looks like a waste of time
	  it has revealed deficiencies in some glyph shapes.  See comment at
	  the end of feta-params.mf how vertical symmetry is achieved.

	. The `---' operator has been replaced everywhere with `--'; this
	  both improves and considerably reduces the font size after
	  conversion with mf2pt1.

	These change aren't explicitly mentioned below since virtually all
	glyphs are affected.

	Other notable differences:

	. Glyphs from feta-accordion.mf now have charboxes around the
	  outline.

	. Fixed incorrect charbox for `accDot'.

	. The `rcomma' and `lcomma' glyphs were distorted due to a typo.

	. Fixed position of the bow in the `upprall' glyph and its siblings.

	. The bulb size in the `2/2 meter' and `4/4 meter' glyphs is now
	  dependent on the staff line thickness to avoid touching the middle
	  staff line at smaller sizes.

	. Largely extended output for feta-testXX: Where useful, glyphs
	are shown both between and on staff lines.


	* mf/feta-params.mf (staff_space_rounded,
	stafflinethickness_rounded, linethickness_rounded,
	ledgerlinethickness_rounded, stemthickness_rounded): New variables.
	Update all code which uses them where appropriate.